--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -323,7 +323,7 @@
   }
 }
 
-.modal {
+/* .modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -345,4 +345,4 @@
 .close {
   float: right;
   cursor: pointer;
-}
+} */
